# HomePrice

./: .env.example  .gitignore  Makefile  README.md
.devcontainer/: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  devcontainer.json  docker-compose.dev.yaml  docker-compose.yaml
app/: main.py  pyproject.toml
app/api/core/: config.py
app/api/models/: score.py
app/migrations/versions/: 3c5d919ae174_added_core_tables.py
backend/: main.py  pyproject.toml
backend/api/core/: config.py
backend/api/db/: session.py
backend/api/ia_binaries/: __init__.py
backend/api/models/: __init__.py  crud_base.py  id.py  score.py
backend/api/models/crud/: crud.py  crud_base.py
backend/api/routers/: __init__.py  common.py  deps.py  v1.py
backend/migrations/: env.py
backend/migrations/versions/: 04da45c3d165_add_tables_init.py  677a2cca66d7_added_core_tables.py
frontend/: astro.config.mjs  demo.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/components/: Footer.astro  Form.astro  Form.tsx  Header.astro  Link.tsx  SolidApp.tsx
frontend/src/components/panel/: Aside.jsx  ButtonNewChat.astro  ButtonNewChat.jsx  Form.jsx  Historical.jsx  Panel.jsx
frontend/src/icons/: PlusIcon.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro  panel.astro
frontend/src/pages/docs/: about.md
frontend/src/utils/: index.ts
